--- a/game.html
+++ b/game.html
@@ -10,6 +10,8 @@
 <script src="engine_client.js"></script>
 <script src="client.js"></script>
 <script src="draw.js"></script>
+<script src="components.js"></script>
+<script src="classes.js"></script>
 <script src="game.js"></script>
 <script src="engine_rev.js"></script>
 
