--- a/game.html
+++ b/game.html
@@ -11,6 +11,7 @@
 <script src="client.js"></script>
 <script src="draw.js"></script>
 <script src="components.js"></script>
+<script src="drawcomponents.js"></script>
 <script src="classes.js"></script>
 <script src="game.js"></script>
 <script src="engine_rev.js"></script>
