--- a/game.html
+++ b/game.html
@@ -9,6 +9,7 @@
 <script src="engine.js"></script>
 <script src="engine_client.js"></script>
 <script src="client.js"></script>
+<script src="drawscript.js"></script>
 <script src="draw.js"></script>
 <script src="components.js"></script>
 <script src="drawcomponents.js"></script>
