--- a/game.html
+++ b/game.html
@@ -12,6 +12,7 @@
 <script src="drawscript.js"></script>
 <script src="draw.js"></script>
 <script src="components.js"></script>
+<script src="script.js"></script>
 <script src="drawcomponents.js"></script>
 <script src="classes.js"></script>
 <script src="game.js"></script>
